changed styles for adaptive

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         </div>
     </section>
 
-    <!-- не смог сделать -->
-    <!-- <section class="why">
+
+    <section class="why">
         <div class="container">
             <div class="why__inner">
                 <h2 class="why__title">Why choose us?</h2>
@@ -133,8 +133,8 @@
                 </div>
             </div>
         </div>
-    </section> -->
-    <!-- не смог сделать -->
+    </section>
+
 
     <section class="works">
         <div class="container">
