--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
         <div class="container">
             <div class="header__top">
-                <a class="logo" href="#"><img class="logo-img" src="./assets/icons/header-logo.svg"
+                <a class="logo" href="./index.html"><img class="logo-img" src="./assets/icons/header-logo.svg"
                         alt="header-logo"></a>
                 <nav class="menu">
                     <button class="menu-btn"></button>
